horizontal scrolling of about us fixed

--- a/global-styles/main.scss
+++ b/global-styles/main.scss
@@ -18,12 +18,9 @@ html * {
 }
 
 body {
-  background: linear-gradient(
-      90deg,
+  background: linear-gradient(90deg,
       hsla(120, 100%, 99%, 1) 0%,
-      hsla(0, 0%, 100%, 1)
-    )
-    100% !important;
+      hsla(0, 0%, 100%, 1)) 100% !important;
 }
 
 a {
@@ -86,6 +83,7 @@ p {
 .menu-center-group {
   position: relative;
   left: 75px;
+
   @media only screen and (max-width: 930px) {
     left: 0;
   }
@@ -171,6 +169,7 @@ p {
 
   .commits-button {
     border: 1px solid white;
+
     &:hover {
       opacity: 0.1 !important;
     }
@@ -231,6 +230,7 @@ p {
   a {
     text-decoration: none;
     color: white;
+
     &:hover {
       cursor: pointer;
     }
@@ -459,6 +459,7 @@ nav {
 .menu {
   font-size: 110%;
   color: black;
+
   &:hover {
     background-color: #6db629;
     color: white;
@@ -505,6 +506,7 @@ nav {
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
+
   .vision {
     color: white;
     flex-basis: 33%;
@@ -515,20 +517,24 @@ nav {
       font-weight: bold;
       font-size: x-large;
     }
+
     p {
       font-size: 20px;
     }
   }
+
   .mission {
     color: white;
     flex-basis: 33%;
     font-size: large;
     min-width: 300px;
     margin: 35px 0;
+
     h2 {
       font-weight: bold;
       font-size: x-large;
     }
+
     p {
       font-size: 20px;
     }
@@ -538,7 +544,8 @@ nav {
 .transparency-wrapper {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
+
   .transparency-title {
     margin-top: 15vh;
     margin-bottom: 10vh;
@@ -550,10 +557,12 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
+
   h3 {
     font-size: large;
     font-weight: bold;
   }
+
   a {
     color: #1976d2;
     font-size: large;
@@ -607,10 +616,12 @@ nav {
   .h2-landing-about {
     font-size: 1.2em !important;
   }
+
   .transparency-text-wrapper {
     h3 {
       font-size: 16px;
     }
+
     a {
       font-size: 16px;
     }
